--- a/src/Makefile
+++ b/src/Makefile
@@ -1,34 +1,41 @@
 CC=gcc
-CFLAGS=-I. 
+CPP=g++
+CPP_FLAGS=-I. 
 # -Wall -pedantic
 DEPS = 
-HEADERS = config.h distorm.h decoder.h instructions.h insts.h mnemonics.h operands.h prefix.h textdefs.h wstring.h x86defs.h
-OBJ = decoder.o distorm.o instructions.o insts.o main.o mnemonics.o operands.o prefix.o textdefs.o
+HEADERS = config.h distorm.h decoder.h instructions.h insts.h mnemonics.h operands.h prefix.h textdefs.h wstring.h x86defs.h parse.h to_string.h nt-headers.h argh.h
+OBJ = decoder.o distorm.o instructions.o insts.o main.o mnemonics.o operands.o prefix.o textdefs.o buffer.o parse.o unicode_winapi.o
  
 all: $(OBJ)
-	$(CC) -o distorm3 $^ $(CFLAGS)
+	$(CPP) -o distorm3 $^ $(CPP_FLAGS)
 	
 decoder.o : decoder.c
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
 distorm.o : distorm.c
-	$(CC) -c -o $@ $< $(CFLAGS)	
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)	
 instructions.o : instructions.c
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
 insts.o : insts.c
-	$(CC) -c -o $@ $< $(CFLAGS)
-main.o : main.c
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
+main.o : main.cpp
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
 mnemonics.o : mnemonics.c
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
 operands.o : operands.c
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
+
 prefix.o : prefix.c
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
 textdefs.o : textdefs.c
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
+buffer.o : buffer.cpp
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
+parse.o : parse.cpp
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
+unicode_winapi.o : unicode_winapi.cpp
+	$(CPP) -c -o $@ $< $(CPP_FLAGS)
 
-
-	
 clean:
 	rm -rf *.o
 	rm -rf distorm3.exe
+	rm -rf distorm3
